first commit as karptonite.com

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -50,7 +50,7 @@
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item"><a class="nav-link" href="{{ site.url }}/blog">Posts Archive</a></li>
                             <li class="nav-item"><a class="nav-link" href="{{ site.url }}/blog/categories">Categories</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{{ site.url }}/blog/tags">Tags</a></li>
+                            <!--<li class="nav-item"><a class="nav-link" href="{{ site.url }}/blog/tags">Tags</a></li> -->
                             <li class="nav-item"><a class="nav-link" href="{{ site.url }}/about">About</a></li>
                         </ul>
                     </div>
@@ -73,8 +73,7 @@
                         <div class="card-header">Links</div>
                         <div class="card-body">
                             <ul class="nav flex-column">
-                                <li class="nav-item"><a class="nav-link" href="http://sculpin.io">sculpin.io</a></li>
-                                <li class="nav-item"><a class="nav-link" href="http://twitter.com/getsculpin">@getsculpin</a></li>
+                                <li class="nav-item"><a class="nav-link" href="http://twitter.com/karptonite">@karptonite</a></li>
                             </ul>
                         </div>
                     </div>
