more blog tweaks

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -9,7 +9,8 @@
             <meta name="robots" content="noindex, follow">
         {% endblock %}
         <link href="{{ site.url }}/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="{{ site.url }}/css/style.css" rel="stylesheet" type="text/css" />
+       <link href="{{ site.url }}/css/style.css" rel="stylesheet" type="text/css" />
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
